--- a/src/pages/styles/konbiniStyles.css
+++ b/src/pages/styles/konbiniStyles.css
@@ -13,7 +13,6 @@
 .konbini-info {
   display: flex;
   justify-content: space-between;
-  min-width: 1119px;
 }
 
 .margin-right {
@@ -70,7 +69,8 @@
 .konbini-title2 {
   text-align: center;
   text-transform: none;
-  min-width: 883px;
+  font-weight: 500;
+  font-size: 5rem;
 }
 
 .konbini-image {
@@ -85,6 +85,7 @@
   height: 100%;
   width: 100%;
 }
+
 @media only screen and (max-width: 978px) {
   .konbini-container {
     margin: 0 20px 0 20px;
@@ -94,20 +95,10 @@
 
   .konbini-title {
     font-size: 3rem;
-    /* font-weight: 500;
-    text-transform: uppercase; */
   }
 
   .margin-right {
     padding-right: 10px;
-  }
-
-  .konbini-title2 {
-    font-size: 3rem;
-    text-align: center;
-    text-transform: none;
-    min-width: 883px;
-    text-align: left;
   }
 
   .konbini-image {
@@ -137,5 +128,19 @@
 
   .konbini-link {
     font-size: 2rem;
+  }
+
+  .konbini-prototype {
+    /* border: 2px solid red; */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .konbini-title2 {
+    font-size: 3rem;
+    text-transform: none;
+
+    font-weight: 500;
   }
 }
